--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "debug": "~2.6.9",
         "dotenv": "^8.2.0",
         "express": "~4.16.1",
-        "hbs": "~4.0.4",
+        "hbs": "^4.7.7",
         "http-errors": "~1.6.3",
         "minimist": "^1.2.5",
         "mongodb": "^3.5.6",
